force-app/main/default/objects/Opportunity_Win_Plan_templates__c/Opportunity_Win_Plan_templates__c.object-meta.xml
<CustomObject>
    <label>Opportunity Win Plan templates</label>
    <nameField>
        <displayFormat>OPW-{0000}</displayFormat>
        <label>Opportunity Win Plan templates Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Win Plan templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>