force-app/main/default/objects/Opportunity_Win_Plan_templates__c/fields/Customer_Reason_for_Taking_Action__c.field-meta.xml
<CustomField>
    <fullName>Customer_Reason_for_Taking_Action__c</fullName>
    <label>Customer Reason for Taking Action</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>