force-app/main/default/objects/Opportunity_Win_Plan_templates__c/fields/Date_1__c.field-meta.xml
<CustomField>
    <fullName>Date_1__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>