force-app/main/default/objects/Opportunity_Win_Plan_templates__c/fields/Evidence_1__c.field-meta.xml
<CustomField>
    <fullName>Evidence_1__c</fullName>
    <label>Evidence</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>