force-app/main/default/objects/Opportunity_Win_Plan_templates__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunity Win Plan templates</relationshipLabel>
    <relationshipName>Opportunity_Win_Plan_templates</relationshipName>
    <type>Lookup</type>
</CustomField>