force-app/main/default/objects/Opportunity_Win_Plan_templates__c/fields/Opportunity_Qualification__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Qualification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Qualification</label>
    <referenceTo>Opportunity_Qualification__c</referenceTo>
    <relationshipLabel>Opportunity Win Plan templates</relationshipLabel>
    <relationshipName>Opportunity_Win_Plan_templates</relationshipName>
    <type>Lookup</type>
</CustomField>