force-app/main/default/objects/Opportunity_Win_Plan_templates__c/fields/Overview_of_the_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Overview_of_the_Opportunity__c</fullName>
    <label>Overview of the Opportunity</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>